[gd_scene load_steps=7 format=3 uid="uid://ee4qlct1vmse"]

[ext_resource type="Script" uid="uid://sy3kwdcijgab" path="res://scenes/title_screen.gd" id="1_iiq27"]
[ext_resource type="VideoStream" uid="uid://i5d4jnko6hmn" path="res://scenes/menu.ogv" id="2_ittby"]
[ext_resource type="Script" uid="uid://crep26t8fwtoo" path="res://scenes/start_button.gd" id="2_wv7dd"]
[ext_resource type="Script" uid="uid://gxd0svfpyyfd" path="res://scenes/exit_button.gd" id="3_ittby"]
[ext_resource type="VideoStream" uid="uid://dim04v8nrh2ow" path="res://scenes/prolog-_4_.ogv" id="5_ittby"]
[ext_resource type="AudioStream" uid="uid://dprd06t8ci1sf" path="res://scenes/menu theme.mp3" id="6_s1ydy"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iiq27")

[node name="prolog" type="VideoStreamPlayer" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.6, 0.6)
stream = ExtResource("5_ittby")
autoplay = true
expand = true

[node name="menu" type="VideoStreamPlayer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.63194
anchor_bottom = 1.60185
offset_right = 40.0051
offset_bottom = 42.0012
scale = Vector2(0.6, 0.6)
stream = ExtResource("2_ittby")
autoplay = true
loop = true

[node name="Wyjdz" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.243137)
self_modulate = Color(1, 1, 1, 0.207843)
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = 103.0
offset_right = 109.5
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ittby")

[node name="Rozpocznij" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.243137)
self_modulate = Color(1, 1, 1, 0.207843)
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -23.0
offset_right = 110.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_wv7dd")

[node name="MenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_s1ydy")
autoplay = true

[connection signal="pressed" from="Wyjdz" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Rozpocznij" to="." method="_on_rozpocznij_pressed"]
